--- a/wwr/Site-plan-rafting.html
+++ b/wwr/Site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>WWR Site Plan</h1>
+    <h1>White Water Rafting Site Plan</h1>
     <h2>Ethan Hunt</h2>
     <h2>WDD 130-03</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>To help those who seek adventure</p>
+    <p>To help those who would want adventures in their lives.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Adventure seekers</p>
+    <p>All those who love the outdoors and want adventure in their lives</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/Ethan's.jpg" alt="Logo image" width="100" height="100"/>
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/f9f7f3-c1292e-315c2b-1d84b5-176087"
-      target="_blank">https://coolors.co/f9f7f3-c1292e-315c2b-1d84b5-176087</a>
+    <a href="https://coolors.co/8ecae6-219ebc-ffffff-fffc99"
+      target="_blank">https://coolors.co/8ecae6-219ebc-ffffff-fffc99</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">#176087</td>
-        <td class="secondary">#315C2B</td>
-        <td class="accent1">#C1292E</td>
-        <td class="accent2">#1D84B5</td>
+        <td class="primary">[#8ecae6]</td>
+        <td class="secondary">[#219ebc]</td>
+        <td class="accent1">[#fffc99]</td>
+        <td class="accent2">[#ffffff]</td>
       </tr>
     </table>
 
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Shadows Into Light
+      Heading Font: [Shadows Into Light]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto
+      Paragraph Font: [Roboto:ital]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
