--- a/personal_site/site-plan.html
+++ b/personal_site/site-plan.html
@@ -21,7 +21,7 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of this Website is to share what books I thought were good, and here from others great books they have read, and what they thought of those books. This website is to also give recommendations on what books to read.</p>  <!-- change this -->
+      <p>The purpose of this website is to share what books I thought were good, and to give quick links to author pages. This website is to also give recommendations on what books to read.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Books</a>
+        <a href="#">Authors</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Books] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [Authors]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,25 +125,61 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to Good Books
+
+        What can you do on this site?
+        You can look at the books that I thought were good on the page called Books. You can also look at a list of Authors and links to their website as well.
+
+        Book of the day
+        Rhythm of War
+        by Brandon Sanderson
+        Rhythm of war is a really great book; it's the 4th book in the Stormlight Archives. So far it's my favorite in the series. Definitely highly recommend reading.
+      
+        book of the week
+        The Name of the Wind
+        By Patrick Rothfuss
+        Its a really good book, this book does have an interesting way of telling the story as it has the main character talking to another person about his life. Definitely highly recommended though.
+        
+        book of the month
+        The Wheel of Time Series
+        by Robert Jordan
+        I know that we said book of the Month but the whole series is really good! It does take a little bit to get into them, and there are some books in the series that you could skip and still know what's going on. Even with that though this is probably one of my favorite series of all time.
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Books</h3>
       <p>
-        [Written copy for the Page 2 here]
+        The Eye of the World, The Great Hunt, The Dragon Reborn, The Shadow Rising, The Fires of Heaven, Lord of Chaos, A Crown of Swords, The Path of Daggers, Winter's Heart, Crossroads of Twilight, Knife of Dreams, The Gathering Storm, Towers of Midnight, A Memory of Light
+        The Name of the Wind, The Wise Man's Fear, The Doors of Stone, ect
       </p>
       <p>Images for the Page 2</p>
         <img src="#" alt="image for page">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Authors</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Brandon Sanderson
+        Scott Westerfield
+        Michael J. Sulivan
+        China Mieville
+        Brian McClellan
+        Jim Butcher
+        Guy Gavriel Kay
+        Brian McClellan
+        Brent Weeks
+        Scott Lynch
+        Rachel Aaron
+        George R.R. Martin
+        Seanan Mcguire
+        Patrick Rothfuss
+        J.R.R. tolkien
+        Nnedi Okoraforr
+        Andrzej Sapkowski
+        Robin Hobb
       </p>
       <p>Images for the Page 3</p>
         <img src="#" alt="image for page3">
