--- a/personal_site/site-plan.html
+++ b/personal_site/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="img/2436702.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -146,8 +146,8 @@
         I know that we said book of the Month but the whole series is really good! It does take a little bit to get into them, and there are some books in the series that you could skip and still know what's going on. Even with that though this is probably one of my favorite series of all time.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="img/istockphoto-1290063471-170667a.jpg" alt="image for homepage">
+        <img src="img/istockphoto-1279460648-170667a.jpg" alt="image for homepage">
 
       </ul>
       <h3>Books</h3>
@@ -156,8 +156,8 @@
         The Name of the Wind, The Wise Man's Fear, The Doors of Stone, ect
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="img/istockphoto-1016131800-170667a.jpg" alt="image for page">
+        <img src="img/istockphoto-1279460648-170667a.jpg" alt="image for page">
 
       </ul>
       <h3>Authors</h3>
@@ -182,8 +182,8 @@
         Robin Hobb
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="img/istockphoto-1302676874-170667a.jpg" alt="image for page3">
+        <img src="img/istockphoto-1304915362-170667a.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -203,7 +203,7 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
