--- a/personal_site/site-plan.html
+++ b/personal_site/site-plan.html
@@ -197,19 +197,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="img/IMG-0125.jpg" alt="home page wireframe" width="200px">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="" alt="page 2 wireframe">
+      <img src="img/IMG-0124.jpg" alt="page 2 wireframe" width="200px">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="img/IMG-0125.jpg" alt="page 3 wireframe" width="200px">
     </main>
   </body>
 
