--- a/wwr/Site-plan-rafting.html
+++ b/wwr/Site-plan-rafting.html
@@ -115,7 +115,7 @@
     <hr />
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
-
+    <img src="images/Screen Shot 2021-12-03 at 7.35.32 PM.png" alt="">
     <h3>Home</h3>
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
