--- a/personal_site/home.html
+++ b/personal_site/home.html
@@ -1,74 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>h1 {text-align: center;}</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
     <div id="content">
         <header>
-            <a id="img/2436702.png" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <a id="logo_link" href="home.html">
+                <img class="logo" src="img/2436702.png" alt="book">
             </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="home.html">Home</a>
+                <a href="page_2.html">Page 2</a>
+                <a href="page_3.html">Page 3</a>
             </nav>
         </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                    <a class='book' href="rates.html">Book Now</a>
-                </div>
-            </section>
+        <div id="top_img_1">
+            <img class="top_img_2" src="img/istockphoto-1279460648-170667a.jpg" alt="It's an image of a book" width="100%" height="100px">
+        </div>
+        <div id="welcome">
+            <h1>Welcome to Good Book's</h1>
         </div>
         <main class="home-grid">
-            <section class="rivers-card">
-                <img class="card-img" src="images/rivers.jpeg" alt="river in forest">
-                <img class="icon" src="images/river_icon.png" alt="river icon">
-                <h2>Rivers</h2>
+            <section class="book_day">
+                <h1>BOOK OF THE DAY</h1>
+                <h2>Rhythm of War; by Brandon Sanderson</h2>
+                <img class="book_img" src="img/dan_dos_santos_ishi_web.jpeg" alt="Wheel of time" width="45%">
+                <p>Rhythm of war is a really great book; it's the 4th book in the Stormlight Archives. So far it's my favorite in the series. Definitely highly recommend reading.</p>
             </section>
-            <section class="camping-card">
-                <img class="card-img" src="images/camping.jpeg" alt="tent in mountains">
-                <img class="icon" src="images/fire_icon.png" alt="fire icon">
-                <h2>Camping</h2>
+            <section class="wind">
+                <h1>BOOK OF THE WEEK</h1>
+                <h2>The Name of The Wind; By Patrick Rothfuss</h2>
+                <img class="book_img" src="img/5496487.jpeg" alt="the name of the wind">
+                <P>Its a really good book, this book does have an interesting way of telling the story as it has the main character talking to another person about his life. Definitely highly recommended though.</P>
             </section>
-            <section class="rapids-card">
-                <img class="card-img" src="images/rapids.jpeg" alt="rafting boat">
-                <img class="icon" src="images/oars.png" alt="oars icon">
-                <h2>Rapids</h2>
-            </section>
-            <div id="background"></div>
-            <img class="mountains" src="images/mountains.jpeg" alt="Misty mountains">
-            <section class="msg">
-                <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-                <a class='join' href="rivers.html">Join Us</a>
+            <section class="wheel">
+                <h1>BOOK OF THE MONTH</h1>
+                <h2>The Wheel of Time Series; by Robert Jordan</h2>
+                <img class="book_img" src="img/the-wheel-of-time-07.jpeg" alt="Wheel of time">
+                <P>I know that we said book of the Month but the whole series is really good! It does take a little bit to get into them, and there are some books in the series that you could skip and still know what's going on. Even with that though this is probably one of my favorite series of all time.</P>
             </section>
         </main>
         <footer>
-            <h3>Dry Oar &copy; 2021 - Ethan Hunt</h3>
-            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-            <h3><a href="contactus.html">Contact Us</a></h3>
+            <h3>Good Book's &copy; 2021 - Ethan Hunt</h3>
+            <h3><a href="contact.html">Contact Us</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                    <img src="img/facebook.png" alt="facebook icon">
                 </a>
                 <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
+                    <img src="img/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="img/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
