--- a/personal_site/home.html
+++ b/personal_site/home.html
@@ -48,7 +48,7 @@
         </main>
         <footer>
             <h3>Good Book's &copy; 2021 - Ethan Hunt</h3>
-            <h3><a href="contact.html">Contact Us</a></h3>
+            <h3><a href="site-plan.html">site-plan</a></h3>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="img/facebook.png" alt="facebook icon">
