--- a/09-Ice_challenge/ice_signup/signup.html
+++ b/09-Ice_challenge/ice_signup/signup.html
@@ -14,7 +14,7 @@
     </header>
     <main id="grid_all">
         <div class="img_div">
-            <img class="img" src="ice_signup/img.jpeg" >
+            <img class="img" src="/ice_signup/img.jpeg" >
         </div>
         <form action="/my-handling-form-page" method="post">
             <ul>
