--- a/personal_site/page_2.html
+++ b/personal_site/page_2.html
@@ -24,7 +24,94 @@
             <img class="top_img_2" src="img/istockphoto-1279460648-170667a.jpg" alt="It's an image of a book" width="100%" height="100px">
         </div>
         <main>
-
+            <h1>This is a list of some of the better books that I have read with links to websites where you can buy them.</h1>
+            <div class="grid_em_all">
+                <a class="class_nu1" href="https://www.amazon.com/Eye-World-Wheel-Time-Book/dp/0812511816">
+                    <img id="img_all" src="books/51tLvp90p4L._SX306_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu2" href="https://www.amazon.com/Great-Hunt-Wheel-Time-Book/dp/0312851405/ref=asc_df_0312851405/?tag=hyprod-20&linkCode=df0&hvadid=312057607832&hvpos=&hvnetw=g&hvrand=8796938750497860637&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-417516245036&psc=1">
+                    <img id="img_all" src="books/51L4-iX+CvL._SY344_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu3" href="https://www.amazon.com/Dragon-Reborn-Wheel-Time-Book/dp/0312852487/ref=asc_df_0312852487/?tag=hyprod-20&linkCode=df0&hvadid=266040790777&hvpos=&hvnetw=g&hvrand=12886252315113013979&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-490880436219&psc=1">
+                    <img id="img_all" src="books/51WrDkKN4EL._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_nu4" href="https://www.amazon.com/Shadow-Rising-Wheel-Time-Book/dp/0312854315/ref=asc_df_0312854315/?tag=hyprod-20&linkCode=df0&hvadid=312178241251&hvpos=&hvnetw=g&hvrand=7196765793617832984&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-491314847906&psc=1&tag=&ref=&adgrpid=60258871577&hvpone=&hvptwo=&hvadid=312178241251&hvpos=&hvnetw=g&hvrand=7196765793617832984&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-491314847906">
+                    <img id="img_all" src="books/51GLOfdaH4L._SX327_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu5" href="https://www.amazon.com/Fires-Heaven-Wheel-Time-Book/dp/0312854277/ref=asc_df_0312854277/?tag=hyprod-20&linkCode=df0&hvadid=312132076929&hvpos=&hvnetw=g&hvrand=10587211428190287398&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-683972632232&psc=1">
+                    <img id="img_all" src="books/51JwL7aUldL._SX328_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu6" href="https://www.amazon.com/Lord-Chaos-Robert-Jordan/dp/0312854285/ref=asc_df_0312854285/?tag=hyprod-20&linkCode=df0&hvadid=312166033806&hvpos=&hvnetw=g&hvrand=9414779754292329199&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-684410385592&psc=1">
+                    <img id="img_all" src="books/51UAFIuRu4L._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>     
+                <a class="class_nu7" href="https://www.amazon.com/Crown-Swords-Book-Seven-Wheel/dp/0765336464/ref=asc_df_0765336464/?tag=hyprod-20&linkCode=df0&hvadid=312114918153&hvpos=&hvnetw=g&hvrand=3642712134149451582&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-493822530935&psc=1&tag=&ref=&adgrpid=58874700661&hvpone=&hvptwo=&hvadid=312114918153&hvpos=&hvnetw=g&hvrand=3642712134149451582&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-493822530935">
+                    <img id="img_all" src="books/41hYR8eORcL._SX329_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu8" href="https://www.amazon.com/Path-Daggers-Wheel-Time-Book/dp/0312857691/ref=asc_df_0312857691/?tag=hyprod-20&linkCode=df0&hvadid=266444585221&hvpos=&hvnetw=g&hvrand=5044976935917489027&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-599780514876&psc=1">
+                    <img id="img_all" src="books/51Lmbu6VJUL._SX330_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu9" href="https://www.amazon.com/Winters-Heart-Wheel-Time-Book/dp/0312864256/ref=asc_df_0312864256/?tag=hyprod-20&linkCode=df0&hvadid=266430365659&hvpos=&hvnetw=g&hvrand=11403833719713302901&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-493179435295&psc=1">
+                    <img id="img_all" src="books/51qRp4Pl5AL._SX330_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu10" href="https://www.amazon.com/Crossroads-Twilight-Book-Wheel-Time/dp/1250252539/ref=asc_df_1250252539/?tag=hyprod-20&linkCode=df0&hvadid=459559487726&hvpos=&hvnetw=g&hvrand=4193366460827729384&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-906170888053&psc=1">
+                    <img id="img_all" src="books/41yQ9d8yzmL._SX273_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu11" href="https://www.amazon.com/Knife-Dreams-Book-Eleven-Wheel/dp/0765337827/ref=asc_df_0765337827/?tag=hyprod-20&linkCode=df0&hvadid=312057556784&hvpos=&hvnetw=g&hvrand=8094382308614278895&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-493854454548&psc=1&tag=&ref=&adgrpid=61851652253&hvpone=&hvptwo=&hvadid=312057556784&hvpos=&hvnetw=g&hvrand=8094382308614278895&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-493854454548">
+                    <img id="img_all" src="books/41I6alqbguL._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_nu12" href="https://www.amazon.com/Gathering-Storm-Wheel-Time-Book/dp/0765302306/ref=asc_df_0765302306/?tag=hyprod-20&linkCode=df0&hvadid=343211975668&hvpos=&hvnetw=g&hvrand=6765020697672455953&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-492717945784&psc=1&tag=&ref=&adgrpid=71766538551&hvpone=&hvptwo=&hvadid=343211975668&hvpos=&hvnetw=g&hvrand=6765020697672455953&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-492717945784">
+                    <img id="img_all" src="books/51Juj9QHdlS._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_nu13" href="https://www.amazon.com/Towers-Midnight-Wheel-Time-Thirteen/dp/0765325942/ref=asc_df_0765325942/?tag=hyprod-20&linkCode=df0&hvadid=343211975668&hvpos=&hvnetw=g&hvrand=1688215847663829759&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-524889522931&psc=1&tag=&ref=&adgrpid=71766538551&hvpone=&hvptwo=&hvadid=343211975668&hvpos=&hvnetw=g&hvrand=1688215847663829759&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-524889522931">
+                    <img id="img_all" src="books/51xj5tDaapL._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_nu14" href="https://www.amazon.com/Memory-Light-Wheel-Time-Book/dp/0765325950/ref=asc_df_0765325950/?tag=hyprod-20&linkCode=df0&hvadid=312057556784&hvpos=&hvnetw=g&hvrand=1663537015278552295&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-523465481916&psc=1&tag=&ref=&adgrpid=61851652253&hvpone=&hvptwo=&hvadid=312057556784&hvpos=&hvnetw=g&hvrand=1663537015278552295&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-523465481916">
+                    <img id="img_all" src="books/511LrumQhHL._SX334_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu15" href="https://www.amazon.com/Name-Wind-Patrick-Rothfuss/dp/0756404746/ref=asc_df_0756404746/?tag=hyprod-20&linkCode=df0&hvadid=312166033806&hvpos=&hvnetw=g&hvrand=3869879707535249178&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-435418873890&psc=1">
+                    <img id="img_all" src="books/51JThzjy3gL._SX306_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu16" href="https://www.amazon.com/Wise-Mans-Fear-Kingkiller-Chronicle/dp/0756407915/ref=asc_df_0756407915/?tag=hyprod-20&linkCode=df0&hvadid=312065522531&hvpos=&hvnetw=g&hvrand=3869879707535249178&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-434022124286&psc=1">
+                    <img id="img_all" src="books/51tLvp90p4L._SX306_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu17" href="https://www.amazon.com/Wise-Mans-Fear-Kingkiller-Chronicle/dp/0756407915/ref=asc_df_0756407915/?tag=hyprod-20&linkCode=df0&hvadid=312065522531&hvpos=&hvnetw=g&hvrand=3869879707535249178&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-434022124286&psc=1">
+                    <img id="img_all" src="books/51-ckcKhlAL._SX308_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu18" href="https://www.amazon.com/Regard-Silent-Things-Kingkiller-Chronicle/dp/0756411327/ref=asc_df_0756411327/?tag=hyprod-20&linkCode=df0&hvadid=312099165577&hvpos=&hvnetw=g&hvrand=3869879707535249178&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-380328162163&psc=1&tag=&ref=&adgrpid=63669393513&hvpone=&hvptwo=&hvadid=312099165577&hvpos=&hvnetw=g&hvrand=3869879707535249178&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-380328162163">
+                    <img id="img_all" src="books/51P3p+cz-uL._SX318_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu19" href="https://www.amazon.com/Way-Kings-Brandon-Sanderson/dp/0765365278/ref=asc_df_0765365278/?tag=hyprod-20&linkCode=df0&hvadid=312114682054&hvpos=&hvnetw=g&hvrand=1178418607961797484&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-436628514908&psc=1">
+                    <img id="img_all" src="books/51ttJEFwlNL._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_nu20" href="https://www.amazon.com/Words-Radiance-Book-Stormlight-Archive/dp/0765365286/ref=asc_df_0765365286/?tag=hyprod-20&linkCode=df0&hvadid=312138059226&hvpos=&hvnetw=g&hvrand=6638244639258423192&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-432391670100&psc=1&tag=&ref=&adgrpid=60258872377&hvpone=&hvptwo=&hvadid=312138059226&hvpos=&hvnetw=g&hvrand=6638244639258423192&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-432391670100">
+                    <img id="img_all" src="books/51UJIGfdFFL._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_n21" href="https://www.amazon.com/Edgedancer-Stormlight-Archive-Brandon-Sanderson/dp/1250166543/ref=asc_df_1250166543/?tag=hyprod-20&linkCode=df0&hvadid=312138059226&hvpos=&hvnetw=g&hvrand=16333333262604236576&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-324529395311&psc=1&tag=&ref=&adgrpid=60258872377&hvpone=&hvptwo=&hvadid=312138059226&hvpos=&hvnetw=g&hvrand=16333333262604236576&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-324529395311">
+                    <img id="img_all" src="books/51+mTNmSphL._SX318_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu22" href="https://www.amazon.com/Oathbringer-Book-Three-Stormlight-Archive/dp/0765365294/ref=asc_df_0765365294/?tag=hyprod-20&linkCode=df0&hvadid=366409908191&hvpos=&hvnetw=g&hvrand=8525484904929650850&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-596846704270&psc=1&tag=&ref=&adgrpid=79033899351&hvpone=&hvptwo=&hvadid=366409908191&hvpos=&hvnetw=g&hvrand=8525484904929650850&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-596846704270">
+                    <img id="img_all" src="books/515LLJbf1hL._SX303_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu23" href="https://www.amazon.com/Dawnshard-Stormlight-Archive-Brandon-Sanderson/dp/125085055X/ref=asc_df_125085055X/?tag=hyprod-20&linkCode=df0&hvadid=532845423570&hvpos=&hvnetw=g&hvrand=6428846913568595192&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-1409805975836&psc=1">
+                    <img id="img_all" src="books/51ztcsfv6hL._SY291_BO1,204,203,200_QL40_FMwebp_.webp">
+                </a>
+                <a class="class_nu24" href="https://www.amazon.com/Rhythm-Stormlight-Archive-Brandon-Sanderson/dp/0765326388/ref=asc_df_0765326388/?tag=hyprod-20&linkCode=df0&hvadid=459559487726&hvpos=&hvnetw=g&hvrand=711754560158833923&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-917808360122&psc=1">
+                    <img id="img_all" src="books/51cmca1DNWL._SX324_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu25" href="https://www.thriftbooks.com/w/mister-monday_garth-nix/316476/item/2016931/?gclid=CjwKCAiAhreNBhAYEiwAFGGKPL_KxssMYWqYD4zRj30oyYaSqXa3J3_Q4KkGQ_H7dakNfE2w87ZQCRoCO2UQAvD_BwE#idiq=2016931&edition=3504680">
+                    <img id="img_all" src="books/d9d64d5940c1eab8fb8b7b3da1919f2873a78fd6.jpeg">
+                </a>
+                <a class="class_nu26" href="https://www.amazon.com/Grim-Tuesday-Keys-Kingdom/dp/1338240307/ref=asc_df_1338240307/?tag=hyprod-20&linkCode=df0&hvadid=312105386385&hvpos=&hvnetw=g&hvrand=8294614047650176468&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9029499&hvtargid=pla-573992590772&psc=1">
+                    <img id="img_all" src="books/51BieOJI-jL._SX346_BO1,204,203,200_.jpg">
+                </a>
+                <a class="class_nu27" href="https://www.thriftbooks.com/w/drowned-wednesday_garth-nix/304122/item/5400995/?gclid=CjwKCAiAhreNBhAYEiwAFGGKPIURDslDHymZtr0cWnfR9TqE2n9neOebu1CbjBKxX1ADaotNMEaz2RoCOekQAvD_BwE#idiq=5400995&edition=3397184">
+                    <img id="img_all" src="books/11ca97416030680d1d3e703f65706d17b637e1c6.jpeg">
+                </a>
+                <a class="class_nu28" href="https://www.betterworldbooks.com/product/detail/9780007175079?shipto=US&curcode=USD&gclid=CjwKCAiAhreNBhAYEiwAFGGKPCQzzFTfhoTKghV0Lum_BLz4AHomDQilxtUpFRuF2CLJPRppIhKwrBoCl18QAvD_BwE">
+                    <img id="img_all" src="books/Sir-Thursday-Nix-Garth-9780007175079.jpeg">
+                </a>
+                </div>
+            </div>  
         </main>
         <footer>
             <h3>Good Book's &copy; 2021 - Ethan Hunt</h3>
