--- a/personal_site/page_2.html
+++ b/personal_site/page_2.html
@@ -24,7 +24,7 @@
             <img class="top_img_2" src="img/istockphoto-1279460648-170667a.jpg" alt="It's an image of a book" width="100%" height="100px">
         </div>
         <main>
-            <h1>This is a list of some of the better books that I have read with links to websites where you can buy them.</h1>
+            <h1 class="list_books">This is a list of some of the better books that I have read with links to websites where you can buy them.</h1>
             <div class="grid_em_all">
                 <a class="class_nu1" href="https://www.amazon.com/Eye-World-Wheel-Time-Book/dp/0812511816">
                     <img id="img_all" src="books/51tLvp90p4L._SX306_BO1,204,203,200_.jpg">
