--- a/personal_site/page_3.html
+++ b/personal_site/page_3.html
@@ -24,40 +24,49 @@
             <img class="top_img_2" src="img/istockphoto-1279460648-170667a.jpg" alt="It's an image of a book" width="100%" height="100px">
         </div>
         <main>
-            <h1>Here's is a list of great authors and a link to their websites</h1>
+            <h1 class="list_authors">Here's a list of great authors and a link to their websites</h1>
             <div id="grid_all">
+                <h2 class="hope_works">Brandon Sanderson</h2>
                 <div class="brandon_sanderson">
-                    <img class="author_img" src="img/MV5BYTU2YmU4YWItZjc2Mi00YTNlLThlZmUtYzRmMmI4MThiMDEzXkEyXkFqcGdeQXVyNDUzOTQ5MjY@._V1_.jpg">
+                    <img class="author_img" src="img/MV5BYTU2YmU4YWItZjc2Mi00YTNlLThlZmUtYzRmMmI4MThiMDEzXkEyXkFqcGdeQXVyNDUzOTQ5MjY@._V1_.jpg" >
                     <a class="brandon_link" href="https://www.brandonsanderson.com/books-and-art/">https://www.brandonsanderson.com/books-and-art/</a>
                 </div>
+                <h2 class="hope_works">Scott Westerfield</h2>
                 <div class="scott_westerfield">
                     <img class="author_img" src="img_authors/535440431.jpeg">
                     <a class="scott_link" href="https://scottwesterfeld.com/">https://scottwesterfeld.com/</a>
                 </div>
+                <h2 class="hope_works">Michael Sulivan</h2>
                 <div class="michael_sulivan">
                     <img class="author_img" src="img_authors/Michael_sullivan_portrait_200_300.jpeg">
                     <a class="michael_link" href="https://riyria.blogspot.com/p/books.html">https://riyria.blogspot.com/p/books.html</a>
                 </div>
+                <h2 class="hope_works">China Mieville</h2>
                 <div class="china_mieville">
                     <img class="author_img" src="img_authors/5700.jpeg">
                     <a class="china_link" href="https://www.chinamieville.net/">https://www.chinamieville.net/</a>
                 </div>
+                <h2 class="hope_works">Brian McClellan</h2>
                 <div class="brian_mcclellan">
                     <img class="author_img" src="img_authors/brian-mcclellan-credit-kevin-kempton.jpeg">
                     <a class="brian_mcclellan_link" href="https://www.brianmcclellan.com/">https://www.brianmcclellan.com/</a>
                 </div>
+                <h2 class="hope_works">Jim Butcher</h2>
                 <div class="jim_butcher">
                     <img class="author_img" src="img_authors/267x367.jpeg">
                     <a class="jim_butcher_link" href="https://www.jim-butcher.com/">https://www.jim-butcher.com/</a>
                 </div>
+                <h2 class="hope_works">Guy Gavriel Kay</h2>
                 <div class="guy_gavriel_kay">
                     <img class="author_img" src="img_authors/60177.jpeg">
                     <a class="guy_kay_link" href="https://brightweavings.com/">https://brightweavings.com/</a>
                 </div>
+                <h2 class="hope_works">Rachel Aaron</h2>
                 <div class="rachel_aaron">
                     <img class="author_img" src="img_authors/download.jpeg">
                     <a class="rachel_link" href="http://rachelaaron.net/">http://rachelaaron.net/</a>
                 </div>
+                <h2 class="hope_works">Brent Weeks</h2>
                 <div class="brent_weeks">
                     <img class="author_img" src="img_authors/51r+OCU3WXL._SX450_.jpg">
                     <a class="brent_weeks_link" href="https://www.brentweeks.com/">https://www.brentweeks.com/</a>
