--- a/personal_site/page_3.html
+++ b/personal_site/page_3.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="home.html">Home</a>
-                <a href="page_2.html">Page 2</a>
-                <a href="page_3.html">Page 3</a>
+                <a href="page_2.html">Books</a>
+                <a href="page_3.html">Authors</a>
             </nav>
         </header>
         <div id="top_img_1">
