--- a/personal_site/page_2.html
+++ b/personal_site/page_2.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="home.html">Home</a>
-                <a href="page_2.html">Page 2</a>
-                <a href="page_3.html">Page 3</a>
+                <a href="page_2.html">Books</a>
+                <a href="page_3.html">Authors</a>
             </nav>
         </header>
         <div id="top_img_1">
@@ -25,6 +25,7 @@
         </div>
         <main>
             <h1 class="list_books">This is a list of some of the better books that I have read with links to websites where you can buy them.</h1>
+            
             <div class="grid_em_all">
                 <a class="class_nu1" href="https://www.amazon.com/Eye-World-Wheel-Time-Book/dp/0812511816">
                     <img id="img_all" src="books/51tLvp90p4L._SX306_BO1,204,203,200_.jpg">
